Added function to remove item

--- a/src/templates/purchase-app.html
+++ b/src/templates/purchase-app.html
@@ -34,6 +34,11 @@
                 <td>
                     <input type="checkbox" [(ngModel)]="item.done">
                 </td>
+                <td>
+                    <button class="btn btn-default" (click)="removeItem(item)">
+                        X
+                    </button>
+                </td>
             </tr>
         </tbody>
     </table>
